--- a/demos/combobox/index.html
+++ b/demos/combobox/index.html
@@ -26,7 +26,7 @@
 					valueField: "value",
 					width: "290px",
 					isMultiSelect: true,
-					defaultSelectValue: null, //[1,2]
+					defaultSelectValue: [1,2],
 					/*textFormatter: function(item){
 						return item['name'] + "(" + item['value'] + ")";
 					}*/
