修改代码规范性和修改bug
bugfix: 调用setItems时会重复的给ul注册事件

--- a/demos/combobox/index.html
+++ b/demos/combobox/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!-- saved from url=(0022)http://smart-ui/combobox/ -->
 <html>
   <head>
+      <meta http-equiv="X-UA-Compatible" content="IE=8">
 		<link rel="stylesheet" href="../../themes/default/smart.ui.combobox.css" />
 		<script src="../../common-lib/jquery-1.9.1.js"></script>
 		<script src="../../common-lib/jquery-ui-1.10.2.custom.js"></script>
