--- a/demos/combobox/index.html
+++ b/demos/combobox/index.html
@@ -99,7 +99,7 @@
 		</script>
 	</head>
 	<body>
-		<div id="cmbTest1"></div><div id="cmbTest2"></div>
+		<div id="cmbTest1"></div>
 		<input type="button" id="btnGetSelectedValues" value="GetSelectedValues" />
 		<input type="button" id="btnDisable" value="Toggle disable/enable" />
 		<input type="button" id="btnSetItems" value="Set Items" />
@@ -107,7 +107,7 @@
 		<input type="button" id="btnClearSelected" value="Clear Selected" />
 		<input type="button" id="btnSelect" value="Select item1, item2 and item3" />
 		<input type="button" id="btnUnSelect" value="Unselect item2, item3" />
-
+        <div id="cmbTest2" style="margin-top:520px;"></div>
 
 
         <div id="cmbTest3"></div>
